--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>portfolio</title>
-  </head>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <link href="//db.onlinewebfonts.com/c/9a86dec82c743a2b47fdcf803a62926e?family=StateMachineW00-Bold" rel="stylesheet" type="text/css"/>
+    <link href="//db.onlinewebfonts.com/c/f6afa27ab0efbdf8cf82bc5549eec51a?family=TypographerGotisch+C" rel="stylesheet" type="text/css"/>
   <body>
     <noscript>
       <strong>We're sorry but portfolio doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
