--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
     <link href="//db.onlinewebfonts.com/c/9a86dec82c743a2b47fdcf803a62926e?family=StateMachineW00-Bold" rel="stylesheet" type="text/css"/>
     <link href="//db.onlinewebfonts.com/c/f6afa27ab0efbdf8cf82bc5549eec51a?family=TypographerGotisch+C" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <body>
     <noscript>
       <strong>We're sorry but portfolio doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
