change name and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Portfolio</title>
+    <title>DRWHIRST</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
     <link href="//db.onlinewebfonts.com/c/9a86dec82c743a2b47fdcf803a62926e?family=StateMachineW00-Bold" rel="stylesheet" type="text/css"/>
